--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
@@ -26,32 +26,31 @@
     "@servicenow/sdk": "4.0.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.87.4",
     "@types/react": "19.x",
     "@types/react-dom": "19.x",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^5.0.2",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "dotenv": "^17.2.2",
     "eslint": "8.50.0",
+    "lucide-react": "^0.543.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "react": "19.x",
     "react-dom": "19.x",
+    "react-router": "^7.8.2",
+    "sn-shadcn-kit": "^1.5.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.4",
     "vite": "^7.1.5"
   },
-  "dependencies": {
-    "@tanstack/react-query": "^5.87.4",
-    "axios": "^1.11.0",
-    "lucide-react": "^0.543.0",
-    "react-router": "^7.8.2",
-    "sn-shadcn-kit": "^1.5.2"
-  },
+  "dependencies": {},
   "overrides": {
     "shadcn-dropzone": {
       "react": "^19.0.0",
