--- a/now.config.json
+++ b/now.config.json
@@ -2,5 +2,5 @@
   "name": "",
   "scope": "",
   "scopeId": "",
-  "tsconfigPath": "./src/server/tsconfig.json"
+  "tsconfigPath": "./tsconfig.json"
 }
