--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "dotenv": "^17.2.2",
     "eslint": "8.50.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "lucide-react": "^0.543.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
@@ -52,22 +53,6 @@
   },
   "overrides": {
     "shadcn-dropzone": {
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0"
-    },
-    "@radix-ui/react-avatar": {
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0"
-    },
-    "@radix-ui/react-popover": {
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0"
-    },
-    "@radix-ui/react-tooltip": {
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0"
-    },
-    "@floating-ui/react-dom": {
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
     },
