--- a/package.json
+++ b/package.json
@@ -44,19 +44,20 @@
     "react": "19.x",
     "react-dom": "19.x",
     "react-router": "^7.8.2",
-    "sn-shadcn-kit": "^2.0.2",
+    "sn-shadcn-kit": "^2.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.4",
-    "vite": "^7.1.5"
+    "vite": "^7.1.5",
+    "zod": "^4.1.12"
   },
   "overrides": {
     "shadcn-dropzone": {
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
     },
-    "zod": "3.22.4",
-    "@hookform/resolvers": "3.3.4"
+    "@tanstack/query-core": "5.90.3"
   }
 }
