--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react": "19.x",
     "react-dom": "19.x",
     "react-router": "^7.8.2",
-    "sn-shadcn-kit": "^2.1.1",
+    "sn-shadcn-kit": "2.1.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
