--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@servicenow/eslint-plugin-sdk-app-plugin": "4.0.0",
     "@servicenow/glide": "26.0.1",
     "@servicenow/isomorphic-rollup": "^1.2.1",
-    "@servicenow/sdk": "4.0.0",
+    "@servicenow/sdk": "4.1.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
@@ -43,8 +43,8 @@
     "postcss-import": "^16.1.1",
     "react": "19.x",
     "react-dom": "19.x",
-    "react-router": "^7.8.2",
-    "sn-shadcn-kit": "2.1.5",
+    "react-router": "^7.13.0",
+    "sn-shadcn-kit": "^2.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
