--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-import": "^16.1.1",
     "react": "19.x",
     "react-dom": "19.x",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.13.0",
     "sn-shadcn-kit": "^2.2.1",
     "sonner": "^2.0.7",
@@ -59,5 +60,8 @@
       "react-dom": "^19.0.0"
     },
     "@tanstack/query-core": "5.90.3"
+  },
+  "dependencies": {
+    "radix-ui": "^1.4.3"
   }
 }
