--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
+    "prebuild": "node scripts/confirm-build.mjs",
     "build": "now-sdk build",
     "deploy": "now-sdk install",
     "transform": "now-sdk transform",
@@ -35,8 +36,8 @@
     "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "dotenv": "^17.2.2",
-    "eslint": "8.50.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "lucide-react": "^0.543.0",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
