--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@servicenow/eslint-plugin-sdk-app-plugin": "4.0.0",
     "@servicenow/glide": "26.0.1",
     "@servicenow/isomorphic-rollup": "^1.2.1",
-    "@servicenow/sdk": "4.1.1",
+    "@servicenow/sdk": "4.2.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
@@ -55,6 +55,8 @@
     "zod": "^4.1.12"
   },
   "overrides": {
+    "minimatch": "^10.2.2",
+    "glob": "^10.4.5",
     "shadcn-dropzone": {
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
