--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
+    "radix-ui": "^1.4.3",
     "react": "19.x",
     "react-dom": "19.x",
     "react-responsive": "^10.0.1",
     "react-router": "^7.13.0",
-    "sn-shadcn-kit": "^2.2.1",
+    "sn-shadcn-kit": "^2.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
@@ -63,8 +64,5 @@
       "react-dom": "^19.0.0"
     },
     "@tanstack/query-core": "5.90.3"
-  },
-  "dependencies": {
-    "radix-ui": "^1.4.3"
   }
 }
